Configure deployment for thetcgbinder.com VPS
- Update Nginx config for thetcgbinder.com domain
- Update environment variables for production domain
- Add automated VPS deployment script with SSH commands
- Configure for VPS IP: 72.60.80.207

--- a/.env.production
+++ b/.env.production
@@ -1,16 +1,16 @@
-# Production Environment Variables
-# Replace these with your actual production values
+# Production Environment Variables for thetcgbinder.com
+# Replace PayPal Client ID with your actual production values
 
 # PayPal Configuration
 VITE_PAYPAL_CLIENT_ID=your-production-paypal-client-id
 VITE_PAYPAL_ENVIRONMENT=production
 
 # API Configuration
-VITE_API_URL=https://your-domain.com/api
+VITE_API_URL=https://thetcgbinder.com/api
 
 # App Configuration
 VITE_APP_NAME=TheTCGBinder
-VITE_APP_URL=https://your-domain.com
+VITE_APP_URL=https://thetcgbinder.com
 
 # Email Configuration (if using external email service)
 VITE_EMAILJS_SERVICE_ID=your-emailjs-service-id
