--- a/nginx.conf
+++ b/nginx.conf
@@ -4,10 +4,10 @@
 
 server {
     listen 80;
-    server_name your-domain.com www.your-domain.com;
+    server_name thetcgbinder.com www.thetcgbinder.com;
     
     # Document root - where your built React app lives
-    root /var/www/thetcgbinder-app/dist;
+    root /var/www/thetcgbinder-app-v2/dist;
     index index.html;
     
     # Handle React Router (SPA routing)
