Describe what you changed

--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "vite"
   ],
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:email-server\" --names \"Frontend,EmailServer\" --prefix-colors \"cyan,green\"",
+    "dev:frontend": "vite",
+    "dev:email-server": "cd server && npm run dev",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "email-server": "cd server && npm start",
+    "setup-email-server": "cd server && npm install"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -50,6 +54,7 @@
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.1",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
